--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
                 <img src="img/IMG-20240503-WA0057.jpg"alt= "Terço">
             </a>
         </div>  
+        <section class="donation-section">
+            <h2>Faça uma Doação via PIX</h2>
+            <div class="pix-container">
+                <img src="img/seu-qr-code.png" alt="QR Code PIX" class="qr-code">
+                <button id="copy-button">Copiar Chave PIX</button>
+                <p id="pix-key">142.852.018-01</p>
+                <p id="message" class="hidden">Chave PIX copiada para a área de transferência!</p>
+            </div>
+        </section>
 
         <section class="contact-section">
             <h2>Entre em Contato</h2>
