--- a/index.html
+++ b/index.html
@@ -89,5 +89,6 @@
     <footer>
         <span>© 2024 FATIMA'S TERÇOS. Todos os direitos reservados.</span>
     </footer>
+      <script src="script.js"></script>
 </body>
 </html>
