--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h2>Faça uma Doação via PIX</h2>
             <div class="pix-container">
                 <button id="copy-button">Copiar Chave PIX</button>
-                <p id="pix-key">142.852.018-01</p>
+                <p id="pix-key">11996729012</p>
                 <p id="message" class="hidden">Chave PIX copiada para a área de transferência!</p>
             </div>
         </section>
