--- a/index.html
+++ b/index.html
@@ -59,12 +59,20 @@
             <a href="img/IMG-20240503-WA0055.jpg"class= "gallery-items">
                 <img src="img/IMG-20240503-WA0055.jpg"alt= "Terço">
             </a>
-            <a href="img/IMG-20240503-WA0059.jpg" class="gallery-items">
-                <img src="img/IMG-20240503-WA0059.jpg"alt= "Terço">
+            <a href="img/tercofati.jpg" class="gallery-items">
+                <img src="img/tercofati.jpg"alt= "Terço">
             </a>
             <a href="img/IMG-20240503-WA0057.jpg" class="gallery-items">
                 <img src="img/IMG-20240503-WA0057.jpg"alt= "Terço">
             </a>
+            <a href="img/tercocris.jpg" class="gallery-items">
+                <img src="img/tercocris.jpg"alt= "Terço">
+                </a>
+            <a href="img/tercoclaudia.jpg" class="gallery-items">
+                <img src="img/tercoclaudia.jpg"alt= "Terço">
+                      </a>
+            <a href="img/tercosidinei.jpg" class="gallery-items">
+                <img src="img/tercosidinei.jpg"alt= "Terço">
         </div>
    <section class="donation-section">
             <h2>Faça uma Doação via PIX</h2>
