--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <main>
         <section class="about-section">
             <h2>Bem-vindo ao Site FATIMA'S TERÇOS</h2>
-
             <p>Cada peça é uma expressão de fé e devoção. Nossa galeria apresenta terços únicos, desde os tradicionais até os personalizados, capturando a essência espiritual de cada um. Não fixamos preços, preferindo avaliar o valor espiritual de cada terço. Além disso, contamos com o apoio de doações para continuar nosso trabalho.</p>
         </section>
         <div class="gallery-container">
@@ -26,6 +25,7 @@
             <a href="img/IMG-20240503-WA0042.jpg" class="gallery-items">
                 <img src="img/IMG-20240503-WA0042.jpg" alt="Terço">
             </a>
+            <!-- Adicionei as tags de fechamento </a> para cada item da galeria -->
             <a href="img/IMG-20240503-WA0043.jpg" class="gallery-items">
                 <img src="img/IMG-20240503-WA0043.jpg" alt="Terço">
             </a>
@@ -51,30 +51,31 @@
                 <img src="img/IMG-20240503-WA0050.jpg" alt= "Terço">
             </a>
             <a href="img/IMG-20240503-WA0058.jpg" class="gallery-items">
-                <img src="img/IMG-20240503-WA0058.jpg"alt= "Terço">
+                <img src="img/IMG-20240503-WA0058.jpg" alt= "Terço">
             </a>
             <a href="img/IMG-20240503-WA0060.jpg" class="gallery-items">
-                <img src="img/IMG-20240503-WA0060.jpg"alt= "Terço">
+                <img src="img/IMG-20240503-WA0060.jpg" alt= "Terço">
             </a>
             <a href="img/IMG-20240503-WA0055.jpg"class= "gallery-items">
-                <img src="img/IMG-20240503-WA0055.jpg"alt= "Terço">
+                <img src="img/IMG-20240503-WA0055.jpg" alt= "Terço">
             </a>
             <a href="img/tercofati.jpg" class="gallery-items">
-                <img src="img/tercofati.jpg"alt= "Terço">
+                <img src="img/tercofati.jpg" alt= "Terço">
             </a>
             <a href="img/IMG-20240503-WA0057.jpg" class="gallery-items">
-                <img src="img/IMG-20240503-WA0057.jpg"alt= "Terço">
+                <img src="img/IMG-20240503-WA0057.jpg" alt= "Terço">
             </a>
             <a href="img/tercocris.jpg" class="gallery-items">
-                <img src="img/tercocris.jpg"alt= "Terço">
-                </a>
+                <img src="img/tercocris.jpg" alt= "Terço">
+            </a>
             <a href="img/tercoclaudia.jpg" class="gallery-items">
-                <img src="img/tercoclaudia.jpg"alt= "Terço">
-                      </a>
+                <img src="img/tercoclaudia.jpg" alt= "Terço">
+            </a>
             <a href="img/tercosidinei.jpg" class="gallery-items">
-                <img src="img/tercosidinei.jpg"alt= "Terço">
+                <img src="img/tercosidinei.jpg" alt= "Terço">
+            </a>
         </div>
-   <section class="donation-section">
+        <section class="donation-section">
             <h2>Faça uma Doação via PIX</h2>
             <div class="pix-container">
                 <button id="copy-button">Copiar Chave PIX</button>
@@ -82,21 +83,18 @@
                 <p id="message" class="hidden">Chave PIX copiada para a área de transferência!</p>
             </div>
         </section>
-
         <section class="contact-section">
             <h2>Entre em Contato</h2>
             <div class="whatsapp-button">
                 <a href="https://api.whatsapp.com/send?phone=5511996729012&text=Olá%20Fátima,%20gostaria%20de%20fazer%20um%20pedido%20de%20terço." target="_blank">
-        
                     <span>Faça seu pedido pelo WhatsApp</span>
                 </a>
             </div>
         </section>
     </main>
-    
     <footer>
         <span>© 2024 FATIMA'S TERÇOS. Todos os direitos reservados.</span>
     </footer>
-      <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
