--- a/index.html
+++ b/index.html
@@ -2,99 +2,119 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>FATIMA'S TERÇOS</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        /* Estilo customizado */
+        .logo {
+            width: 100px; /* Tamanho da logo */
+            height: auto;
+        }
+
+        /* Hero Section */
+        .hero-section img {
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+        }
+
+        footer {
+            background-color: #343a40;
+            color: #fff;
+            padding: 20px 0;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <div class="header-content">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="img/logo2.jpg" alt="Logo" class="logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="historia.html">Nossa História</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="galeria.html">Galeria dos Terços</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contato.html">Contato</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-        </div>
-    </header>
-    <main>
-        <section class="about-section">
-            <h2>Bem-vindo ao Site FATIMA'S TERÇOS</h2>
-            <p>Cada peça é uma expressão de fé e devoção. Nossa galeria apresenta terços únicos, desde os tradicionais até os personalizados, capturando a essência espiritual de cada um. Não fixamos preços, preferindo avaliar o valor espiritual de cada terço. Além disso, contamos com o apoio de doações para continuar nosso trabalho.</p>
-        </section>
-        <div class="gallery-container">
-            <a href="img/IMG-20240503-WA0041.jpg" class="gallery-items">
-                <img src="img/IMG-20240503-WA0041.jpg" alt="Terço">
-            </a>
-            <a href="img/IMG-20240503-WA0042.jpg" class="gallery-items">
-                <img src="img/IMG-20240503-WA0042.jpg" alt="Terço">
-            </a>
-            <!-- Adicionei as tags de fechamento </a> para cada item da galeria -->
-            <a href="img/IMG-20240503-WA0043.jpg" class="gallery-items">
-                <img src="img/IMG-20240503-WA0043.jpg" alt="Terço">
-            </a>
-            <a href="img/IMG-20240503-WA0044.jpg" class="gallery-items">
-                <img src="img/IMG-20240503-WA0044.jpg" alt="Terço">
-            </a>
-            <a href="img/IMG-20240503-WA0045.jpg" class="gallery-items">
-                <img src="img/IMG-20240503-WA0045.jpg" alt="Terço">
-            </a>
-            <a href="img/IMG-20240503-WA0046.jpg" class="gallery-items">
-                <img src="img/IMG-20240503-WA0046.jpg" alt="Terço">
-            </a>
-            <a href="img/IMG-20240503-WA0047.jpg" class="gallery-items">
-                <img src="img/IMG-20240503-WA0047.jpg" alt="Terço">
-            </a>
-            <a href="img/IMG-20240503-WA0048.jpg" class="gallery-items">
-                <img src="img/IMG-20240503-WA0048.jpg" alt="Terço">
-            </a>
-            <a href="img/IMG-20240503-WA0070.jpg" class="gallery-items">
-                <img src="img/IMG-20240503-WA0070.jpg" alt= "Terço">
-            </a>
-            <a href="img//IMG-20240503-WA0050.jpg" class="gallery-items">
-                <img src="img/IMG-20240503-WA0050.jpg" alt= "Terço">
-            </a>
-            <a href="img/IMG-20240503-WA0058.jpg" class="gallery-items">
-                <img src="img/IMG-20240503-WA0058.jpg" alt= "Terço">
-            </a>
-            <a href="img/IMG-20240503-WA0060.jpg" class="gallery-items">
-                <img src="img/IMG-20240503-WA0060.jpg" alt= "Terço">
-            </a>
-            <a href="img/IMG-20240503-WA0055.jpg"class= "gallery-items">
-                <img src="img/IMG-20240503-WA0055.jpg" alt= "Terço">
-            </a>
-            <a href="img/tercofati.jpg" class="gallery-items">
-                <img src="img/tercofati.jpg" alt= "Terço">
-            </a>
-            <a href="img/IMG-20240503-WA0057.jpg" class="gallery-items">
-                <img src="img/IMG-20240503-WA0057.jpg" alt= "Terço">
-            </a>
-            <a href="img/tercocris.jpg" class="gallery-items">
-                <img src="img/tercocris.jpg" alt= "Terço">
-            </a>
-            <a href="img/tercoclaudia.jpg" class="gallery-items">
-                <img src="img/tercoclaudia.jpg" alt= "Terço">
-            </a>
-            <a href="img/tercosidinei.jpg" class="gallery-items">
-                <img src="img/tercosidinei.jpg" alt= "Terço">
-            </a>
-        </div>
-        <section class="donation-section">
-            <h2>Faça uma Doação via PIX</h2>
-            <div class="pix-container">
-                <button id="copy-button">Copiar Chave PIX</button>
-                <p id="pix-key">11996729012</p>
-                <p id="message" class="hidden">Chave PIX copiada para a área de transferência!</p>
+    <!-- Hero Section -->
+    <section class="hero-section text-center my-5">
+        <div class="container">
+            <h1 class="display-4 mb-4">FATIMA'S TERÇOS</h1>
+            <p class="lead">Espalhando fé e devoção através de cada peça única.</p>
+            <div class="row">
+                <div class="col-md-4 mb-3">
+                    <img src="img/terçoprincipal.jpg" alt="Terço Principal" class="img-fluid">
+                </div>
+                <div class="col-md-4 mb-3">
+                    <img src="img/tcaperecida.jpg" alt="Terço Aparecida" class="img-fluid">
+                </div>
+                <div class="col-md-4 mb-3">
+                    <img src="img/terçosteriznha.jpg" alt="Terço Teresinha" class="img-fluid">
+                </div>
             </div>
-        </section>
-        <section class="contact-section">
-            <h2>Entre em Contato</h2>
-            <div class="whatsapp-button">
-                <a href="https://api.whatsapp.com/send?phone=5511996729012&text=Olá%20Fátima,%20gostaria%20de%20fazer%20um%20pedido%20de%20terço." target="_blank">
-                    <span>Faça seu pedido pelo WhatsApp</span>
-                </a>
-            </div>
-        </section>
-    </main>
+        </div>
+    </section>
+
+    <!-- Footer -->
     <footer>
-        <span>© 2024 FATIMA'S TERÇOS. Todos os direitos reservados.</span>
+        <div class="container text-center">
+            <p>&copy; 2024 FATIMA'S TERÇOS. Todos os direitos reservados.</p>
+        </div>
     </footer>
-    <script src="script.js"></script>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
+
+
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Galeria dos Terços - FATIMA'S TERÇOS</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        /* Estilo Customizado */
+        .logo {
+            width: 100px;
+            height: auto;
+        }
+
+        .gallery-card img {
+            height: 250px;
+            object-fit: cover;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+            cursor: pointer;
+        }
+
+        footer {
+            background-color: #343a40;
+            color: #fff;
+            padding: 20px 0;
+        }
+    </style>
+</head>
+<body>
