--- a/index.html
+++ b/index.html
@@ -7,10 +7,33 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        /* Estilo customizado */
-        .logo {
-            width: 100px; /* Tamanho da logo */
-            height: auto;
+        /* Reset padrão */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            color: #333;
+            line-height: 1.6;
+        }
+
+        /* Navbar personalizada */
+        .navbar-custom {
+            background-color: #000000; /* Preto absoluto */
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+        }
+
+        .navbar-custom .navbar-nav .nav-link {
+            color: #ddd; /* Texto cinza claro */
+            transition: color 0.3s ease;
+        }
+
+        .navbar-custom .navbar-nav .nav-link:hover {
+            color: #fff; /* Branco no hover */
         }
 
         /* Hero Section */
@@ -18,22 +41,38 @@
             width: 100%;
             height: auto;
             border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 4px 6px rgb(0, 0, 0);
         }
 
+        /* Footer */
         footer {
-            background-color: #343a40;
+            background-color: #000000; /* Preto absoluto */
             color: #fff;
-            padding: 20px 0;
+            padding: 30px 0;
+        }
+
+        footer p {
+            margin: 0;
+            font-size: 0.9rem;
+        }
+
+        footer .footer-links a {
+            color: #B8860B; /* Dourado escuro */
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        footer .footer-links a:hover {
+            color: #fff; /* Branco no hover */
         }
     </style>
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-custom">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="img/logo2.jpg" alt="Logo" class="logo">
+                <img src="img/logo3.jpeg" alt="Logo" class="logo" style="width: 100px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -77,6 +116,11 @@
     <footer>
         <div class="container text-center">
             <p>&copy; 2024 FATIMA'S TERÇOS. Todos os direitos reservados.</p>
+            <div class="footer-links mt-2">
+                <a href="historia.html" class="mx-2">Nossa História</a> |
+                <a href="galeria.html" class="mx-2">Galeria</a> |
+                <a href="contato.html" class="mx-2">Contato</a>
+            </div>
         </div>
     </footer>
 
@@ -84,37 +128,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
-
-
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galeria dos Terços - FATIMA'S TERÇOS</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        /* Estilo Customizado */
-        .logo {
-            width: 100px;
-            height: auto;
-        }
-
-        .gallery-card img {
-            height: 250px;
-            object-fit: cover;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-            cursor: pointer;
-        }
-
-        footer {
-            background-color: #343a40;
-            color: #fff;
-            padding: 20px 0;
-        }
-    </style>
-</head>
-<body>
