--- a/historia.html
+++ b/historia.html
@@ -7,13 +7,36 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        /* Estilo customizado */
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            background-color: #f9f9f9;
+        /* Reset padrão */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
 
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            line-height: 1.6;
+            color: #333;
+        }
+
+        /* Navbar personalizada */
+        .navbar-custom {
+            background-color: #000000; /* Preto absoluto */
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+        }
+
+        .navbar-custom .navbar-nav .nav-link {
+            color: #ddd;
+            transition: color 0.3s ease;
+        }
+
+        .navbar-custom .navbar-nav .nav-link:hover {
+            color: #fff; /* Branco no hover */
+        }
+
+        /* Seção Nossa História */
         .story-section img {
             width: 100%;
             max-height: 400px;
@@ -22,19 +45,67 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
         }
 
-        footer {
-            background-color: #343a40;
+        .story-section h1 {
+            color: #B8860B; /* Dourado escuro */
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+
+        /* Botão personalizado */
+        .btn-custom {
+            background-color: #B8860B; /* Dourado escuro */
             color: #fff;
-            padding: 20px 0;
+            border: none;
+            transition: all 0.3s ease;
+        }
+
+        .btn-custom:hover {
+            background-color: #8B6508; /* Tom mais escuro */
+            color: #fff;
+            transform: translateY(-3px);
+        }
+
+        /* Footer */
+        footer {
+            background-color: #000000; /* Preto absoluto */
+            color: #fff;
+            padding: 30px 0;
+        }
+
+        footer p {
+            margin: 0;
+            font-size: 0.9rem;
+        }
+
+        footer .footer-links a {
+            color: #B8860B; /* Dourado escuro */
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        footer .footer-links a:hover {
+            color: #fff; /* Branco no hover */
+        }
+        /* Destaque Terços */
+        .highlight-section {
+            text-align: center;
+            margin: 30px 0;
+        }
+
+        .highlight-section h2 {
+            color: #B8860B; /* Amarelo dourado */
+            font-size: 2.5rem;
+            font-weight: bold;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
     </style>
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-custom">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="img/logo2.jpg" alt="Logo" style="width: 80px;">
+                <img src="img/logo3.jpeg" alt="Logo" style="width: 100px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -56,10 +127,10 @@
     </nav>
 
     <!-- Seção Nossa História -->
-    <section class="container my-5">
+    <section class="container my-5 story-section">
         <div class="row align-items-center">
             <div class="col-md-6">
-                <h1 class="mb-4">Nossa História</h1>
+                <h1>Nossa História</h1>
                 <p>
                     O projeto <strong>FATIMA'S TERÇOS</strong> nasceu do desejo de espalhar a fé e a devoção através
                     de peças feitas à mão com amor e cuidado. Cada terço carrega não apenas beleza, mas também
@@ -70,16 +141,27 @@
                     de Nossa Senhora. A cada doação, fortalecemos laços e compartilhamos bênçãos.
                 </p>
             </div>
-            <div class="col-md-6 text-center">
+            <div class="col-md-6 text-center mb-4">
                 <img src="img/familia.jpg" alt="Foto da Família" class="img-fluid">
+            </div>
+            <div class="text-center mt-3">
+                <a href="contato.html" class="btn btn-custom">Entre em Contato</a>
             </div>
         </div>
     </section>
+    <section class="highlight-section">
+        <h2>+ de 50 TERÇOS DOADOS!</h2>
+    </section>
 
-    <!-- Footer -->
-    <footer>
+     <!-- Footer -->
+     <footer>
         <div class="container text-center">
             <p>&copy; 2024 FATIMA'S TERÇOS. Todos os direitos reservados.</p>
+            <div class="footer-links mt-2">
+                <a href="historia.html" class="mx-2">Nossa História</a> |
+                <a href="galeria.html" class="mx-2">Galeria</a> |
+                <a href="contato.html" class="mx-2">Contato</a>
+            </div>
         </div>
     </footer>
 
