--- a/galeria.html
+++ b/galeria.html
@@ -7,12 +7,40 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        /* Estilo customizado */
+        /* Reset padrão */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+
+        /* Navbar personalizada */
+        .navbar-custom {
+            background-color: #000000; /* Fundo preto */
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+        }
+
+        .navbar-custom .navbar-nav .nav-link {
+            color: #ddd;
+            transition: color 0.3s ease;
+        }
+
+        .navbar-custom .navbar-nav .nav-link:hover {
+            color: #fff; /* Branco no hover */
+        }
+
         .logo {
             width: 100px;
             height: auto;
         }
 
+        /* Galeria */
         .gallery-card img {
             width: 100%;
             height: 200px;
@@ -33,20 +61,48 @@
             object-fit: contain;
         }
 
-        footer {
-            background-color: #343a40;
+        /* Botões */
+        .btn-custom {
+            background-color: #B8860B; /* Dourado escuro */
             color: #fff;
-            padding: 20px 0;
-            text-align: center;
+            border: none;
+            transition: all 0.3s ease;
+        }
+
+        .btn-custom:hover {
+            background-color: #8B6508;
+            transform: translateY(-3px);
+        }
+
+        /* Footer */
+        footer {
+            background-color: #000000; /* Preto absoluto */
+            color: #fff;
+            padding: 30px 0;
+        }
+
+        footer p {
+            margin: 0;
+            font-size: 0.9rem;
+        }
+
+        footer .footer-links a {
+            color: #B8860B; /* Dourado escuro */
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        footer .footer-links a:hover {
+            color: #fff; /* Branco no hover */
         }
     </style>
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-custom">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="img/logo2.jpg" alt="Logo" class="logo">
+                <img src="img/logo3.jpeg" alt="Logo" class="logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -63,7 +119,7 @@
 
     <!-- Galeria dos Terços -->
     <section class="container my-5">
-        <h1 class="text-center mb-4">Galeria dos Terços</h1>
+        <h1 class="text-center mb-4">Galeria dos Terços Doados </h1>
         <div class="row g-4">
             <!-- Loop com as imagens fornecidas -->
             <div class="col-md-3 gallery-card">
@@ -96,6 +152,36 @@
             <div class="col-md-3 gallery-card">
                 <img src="img/tercosidinei.jpg" alt="Terço Sidinei" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="showImage(this)">
             </div>
+            <div class="col-md-3 gallery-card">
+                <img src="img/terços1 (1).jpeg" alt="Terço 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="showImage(this)">
+            </div>
+            <div class="col-md-3 gallery-card">
+                <img src="img/terços1 (2).jpeg" alt="Terço 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="showImage(this)">
+            </div>
+            <div class="col-md-3 gallery-card">
+                <img src="img/terços1 (3).jpeg" alt="Terço 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="showImage(this)">
+            </div>
+            <div class="col-md-3 gallery-card">
+                <img src="img/terços1 (4).jpeg" alt="Terço 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="showImage(this)">
+            </div>
+            <div class="col-md-3 gallery-card">
+                <img src="img/terços2 (1).jpeg" alt="Terço 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="showImage(this)">
+            </div>
+            <div class="col-md-3 gallery-card">
+                <img src="img/terços2 (2).jpeg" alt="Terço 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="showImage(this)">
+            </div>
+            <div class="col-md-3 gallery-card">
+                <img src="img/terços2 (3).jpeg" alt="Terço 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="showImage(this)">
+            </div>
+            <div class="col-md-3 gallery-card">
+                <img src="img/terços2 (4).jpeg" alt="Terço 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="showImage(this)">
+            </div>
+            <div class="col-md-3 gallery-card">
+                <img src="img/terços3 (1).jpeg" alt="Terço 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="showImage(this)">
+            </div>
+            <div class="col-md-3 gallery-card">
+                <img src="img/terços3 (2).jpeg" alt="Terço 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="showImage(this)">
+            </div>
         </div>
     </section>
 
@@ -107,23 +193,31 @@
                     <img src="" id="modalImage" class="img-fluid rounded">
                 </div>
                 <div class="modal-footer justify-content-center">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                    <button type="button" class="btn btn-custom" data-bs-dismiss="modal">Fechar</button>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Footer -->
-    <footer>
+  <!-- Footer -->
+  <footer>
+    <div class="container text-center">
         <p>&copy; 2024 FATIMA'S TERÇOS. Todos os direitos reservados.</p>
-    </footer>
+        <div class="footer-links mt-2">
+            <a href="historia.html" class="mx-2">Nossa História</a> |
+            <a href="galeria.html" class="mx-2">Galeria</a> |
+            <a href="contato.html" class="mx-2">Contato</a>
+        </div>
+    </div>
+</footer>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        function showImage(element) {
-            document.getElementById('modalImage').src = element.src;
-        }
-    </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    // Função para exibir a imagem no modal
+    function showImage(element) {
+        const modalImage = document.getElementById('modalImage');
+        modalImage.src = element.src;
+    }
+</script>
 </body>
 </html>
