--- a/contato.html
+++ b/contato.html
@@ -14,20 +14,40 @@
             box-sizing: border-box;
         }
 
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f9f9f9;
-            color: #333;
-            line-height: 1.6;
+        html, body {
+            height: 100%;
+            margin: 0;
+        }
+
+        /* Estrutura principal */
+        .wrapper {
+            display: flex;
+            flex-direction: column;
+            min-height: 100%;
+        }
+
+        main {
+            flex: 1; /* Garante que o conteúdo principal ocupe o espaço disponível */
+        }
+
+        /* Navbar */
+        .navbar-custom {
+            background-color: #000000; /* Fundo preto */
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+        }
+
+        .navbar-custom .navbar-nav .nav-link {
+            color: #ddd;
+            transition: color 0.3s ease;
+        }
+
+        .navbar-custom .navbar-nav .nav-link:hover {
+            color: #fff;
         }
 
         .logo {
             width: 100px;
             height: auto;
-        }
-
-        h1, h4 {
-            color: #333;
         }
 
         /* Botões estilizados */
@@ -45,88 +65,114 @@
         }
 
         .contact-button:hover {
-            background-color: #8B6508; /* Dourado mais intenso */
+            background-color: #8B6508;
             transform: translateY(-3px);
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
         }
 
         .pix-button {
             background-color: #2E5E4E; /* Verde musgo */
+            color: #fff;
             border: none;
             padding: 12px 20px;
             border-radius: 5px;
-            color: #fff;
             font-size: 1rem;
             font-weight: bold;
             transition: background-color 0.3s ease;
         }
 
         .pix-button:hover {
-            background-color: #8B6508; /* Dourado escuro no hover */
+            background-color: #8B6508;
         }
 
-        footer {
-            background-color: #333;
+       /* Footer */
+       footer {
+            background-color: #000000; /* Preto absoluto */
             color: #fff;
-            padding: 20px 0;
-            text-align: center;
+            padding: 30px 0;
+        }
+
+        footer p {
+            margin: 0;
+            font-size: 0.9rem;
+        }
+
+        footer .footer-links a {
+            color: #B8860B; /* Dourado escuro */
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        footer .footer-links a:hover {
+            color: #fff; /* Branco no hover */
         }
     </style>
 </head>
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">
-                <img src="img/logo2.jpg" alt="Logo" class="logo">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="historia.html">Nossa História</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="galeria.html">Galeria dos Terços</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="contato.html">Contato</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <!-- Seção Contato -->
-    <section class="container my-5">
-        <h1 class="text-center mb-4">Entre em Contato</h1>
-        <div class="row text-center">
-            <!-- WhatsApp -->
-            <div class="col-md-6 mb-4">
-                <h4>WhatsApp</h4>
-                <p>Envie-nos uma mensagem rápida pelo WhatsApp:</p>
-                <a href="https://api.whatsapp.com/send?phone=5511996729012" target="_blank" class="contact-button">
-                    <i class="bi bi-whatsapp"></i> Iniciar Conversa
+    <div class="wrapper">
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg navbar-custom">
+            <div class="container">
+                <a class="navbar-brand" href="index.html">
+                    <img src="img/logo3.jpeg" alt="Logo" class="logo">
                 </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="historia.html">Nossa História</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="galeria.html">Galeria dos Terços</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="contato.html">Contato</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+        </nav>
 
-            <!-- PIX -->
-            <div class="col-md-6 mb-4">
-                <h4>Doações via PIX</h4>
-                <p>Chave PIX: <strong>11996729012</strong></p>
-                <button class="pix-button" onclick="copyPix()">Copiar Chave PIX</button>
+        <!-- Conteúdo Principal -->
+        <main class="container my-5">
+            <h1 class="text-center mb-4">Entre em Contato</h1>
+            <div class="row text-center">
+                <!-- WhatsApp -->
+                <div class="col-md-6 mb-4">
+                    <h4>WhatsApp</h4>
+                    <p>Envie-nos uma mensagem rápida pelo WhatsApp:</p>
+                    <a href="https://api.whatsapp.com/send?phone=5511996729012" target="_blank" class="contact-button">
+                        Iniciar Conversa
+                    </a>
+                </div>
+
+                <!-- PIX -->
+                <div class="col-md-6 mb-4">
+                    <h4>Doações via PIX</h4>
+                    <p>Chave PIX: <strong>11996729012</strong></p>
+                    <button class="pix-button" onclick="copyPix()">Copiar Chave PIX</button>
+                </div>
             </div>
-        </div>
-    </section>
+        </main>
 
-    <!-- Footer -->
+         <!-- Footer -->
     <footer>
-        <div class="container">
+        <div class="container text-center">
             <p>&copy; 2024 FATIMA'S TERÇOS. Todos os direitos reservados.</p>
+            <div class="footer-links mt-2">
+                <a href="historia.html" class="mx-2">Nossa História</a> |
+                <a href="galeria.html" class="mx-2">Galeria</a> |
+                <a href="contato.html" class="mx-2">Contato</a>
+            </div>
         </div>
     </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
