--- a/contato.html
+++ b/contato.html
@@ -71,20 +71,23 @@
         }
 
         .pix-button {
-            background-color: #2E5E4E; /* Verde musgo */
+            display: inline-block;
+            background-color: #B8860B; /* Dourado escuro */
             color: #fff;
-            border: none;
+            text-decoration: none;
             padding: 12px 20px;
-            border-radius: 5px;
+            border-radius: 50px;
             font-size: 1rem;
             font-weight: bold;
-            transition: background-color 0.3s ease;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+            transition: all 0.3s ease;
         }
 
         .pix-button:hover {
             background-color: #8B6508;
+            transform: translateY(-3px);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
         }
-
        /* Footer */
        footer {
             background-color: #000000; /* Preto absoluto */
