--- a/historia.html
+++ b/historia.html
@@ -97,6 +97,24 @@
             font-size: 2.5rem;
             font-weight: bold;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        } 
+        
+        /* Ajuste do botão hamburguer */
+        .navbar-toggler {
+            border: 2px solid #fff; /* Borda branca */
+            border-radius: 5px;
+            padding: 5px 10px; /* Ajusta o tamanho */
+            transition: all 0.3s ease;
+        }
+
+        .navbar-toggler-icon {
+            background-color: transparent;
+            filter: invert(100%); /* Torna o ícone branco */
+        }
+
+        .navbar-toggler:hover {
+            background-color: #B8860B; /* Fundo dourado no hover */
+            border-color: #B8860B;
         }
     </style>
 </head>
