--- a/contato.html
+++ b/contato.html
@@ -109,6 +109,25 @@
         footer .footer-links a:hover {
             color: #fff; /* Branco no hover */
         }
+
+        
+        /* Ajuste do botão hamburguer */
+        .navbar-toggler {
+            border: 2px solid #fff; /* Borda branca */
+            border-radius: 5px;
+            padding: 5px 10px; /* Ajusta o tamanho */
+            transition: all 0.3s ease;
+        }
+
+        .navbar-toggler-icon {
+            background-color: transparent;
+            filter: invert(100%); /* Torna o ícone branco */
+        }
+
+        .navbar-toggler:hover {
+            background-color: #B8860B; /* Fundo dourado no hover */
+            border-color: #B8860B;
+        }
     </style>
 </head>
 <body>
