--- a/historia.html
+++ b/historia.html
@@ -97,7 +97,7 @@
             font-size: 2.5rem;
             font-weight: bold;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-        } 
+        }
         
         /* Ajuste do botão hamburguer */
         .navbar-toggler {
@@ -119,30 +119,25 @@
     </style>
 </head>
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-custom">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">
-                <img src="img/logo3.jpeg" alt="Logo" style="width: 100px;">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="historia.html">Nossa História</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="galeria.html">Galeria dos Terços</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contato.html">Contato</a>
-                    </li>
-                </ul>
-            </div>
+   <!-- Navbar -->
+   <nav class="navbar navbar-expand-lg navbar-custom">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">
+            <img src="img/logo3.jpeg" alt="Logo" style="width: 100px;">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="historia.html">Nossa História</a></li>
+                <li class="nav-item"><a class="nav-link" href="galeria.html">Galeria dos Terços</a></li>
+                <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://chat.whatsapp.com/HN3pIbhQvCVEzhs41ztbpw" target="_blank">Terço da Alegria</a></li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
 
     <!-- Seção Nossa História -->
     <section class="container my-5 story-section">
@@ -170,6 +165,7 @@
     <section class="highlight-section">
         <h2>+ de 50 TERÇOS DOADOS!</h2>
     </section>
+    
 
      <!-- Footer -->
      <footer>
@@ -178,7 +174,8 @@
             <div class="footer-links mt-2">
                 <a href="historia.html" class="mx-2">Nossa História</a> |
                 <a href="galeria.html" class="mx-2">Galeria</a> |
-                <a href="contato.html" class="mx-2">Contato</a>
+                <a href="contato.html" class="mx-2">Contato</a> |
+                <a href="https://chat.whatsapp.com/HN3pIbhQvCVEzhs41ztbpw" class="mx-2" target="_blank">Terço da Alegria</a>
             </div>
         </div>
     </footer>
